# zuoye

./: CMakeLists.txt  README.md
Assignment1/: README.md  test_all.sh
Assignment1/src/: vector_ops.cpp
Assignment1/test/: test_copy.cpp  test_dot_product.cpp  test_normalize.cpp  test_subtract.cpp
Assignment2/: CMakeLists.txt
Assignment2/includes/: stringg.hpp
Assignment2/src/: stringg.cpp
Assignment2/test/: a.cpp  b.cpp
includes/: vector_ops.hpp
src/: vector_ops.cpp
test/: test_add.cpp  test_cross_prduct.cpp  test_magnitude.cpp  test_subtract.cpp
